# my-openl-template

./: CMakeLists.txt
shader/: test.frag  test.vert
src/: main.cpp
src/gfx/: framebuffer.cpp  framebuffer.hpp  shaders.cpp  texture.cpp  texture.hpp  vertex_attribute.hpp
